feat: add new function

--- a/main/mainpag.html
+++ b/main/mainpag.html
@@ -32,6 +32,14 @@
         </div>
     </header>
     <main>
+        <div id="cookieModal" class="modal1">
+            <div class="modal-content1">
+                <h2 id="seofcos"></h2>
+                <p id="usewecooc"></p>
+                <button id="acceptBtn"></button>
+                <button id="declineBtn"></button>
+            </div>
+        </div>
         <div class="realsearch">
             <div class="realsearchtext">
                 <p id="real">
@@ -297,6 +305,7 @@
                 <p>© 2021 Neeva Inc</p>
         </div>
     </footer>
+    <script src="coocies.js"></script>
     <script src="../registration/script.js"></script>
     <script src="../general/translat.js"></script>
     <script src="../general/map.js"></script>
@@ -304,5 +313,6 @@
     <script src="../general/burger.js"></script>
     <script src="../general/tema.js"></script>
     <script src="pagination.js"></script>
+
 </body>
 </html>
