feat: fix error

--- a/main/mainpag.html
+++ b/main/mainpag.html
@@ -133,7 +133,7 @@
                     <input type="text" class="custom-search-input" placeholder="Enter email to sign up">
                     <button class="custom-search-botton" type="submit">Get Started</button>  
                   </div>
-                <p id="nocred">
+                <p id="nocred1">
                     
                 </p>
             </div>
@@ -247,7 +247,7 @@
                         <input type="text" class="custom-search-input" placeholder="Enter email to sign up">
                         <button class="custom-search-botton" type="submit">Get Started</button>  
                       </div>
-                    <p id="nocred">
+                    <p id="nocred2">
                     </p>
                 </div>
             </div>
